Changelog
=========

Changes from cgkit-2.0.0alpha6 to cgkit-2.0.0alpha7:

New features:

- The license has changed! Instead of the LGPL cgkit now uses the
  MPL/GPL/LGPL tri-license (this applies to the Python package "cgkit").
  The Maya package und plugin uses the MPL.

Bug fixes/enhancements:

- quat: By default, the slerp() function now always interpolates along
  the shortest path. The function has a new optional argument "shortest"
  (default: True) that controls this behavior. If you set shortest to
  False you will get the previous behavior where it depends on the
  quaternions if you get the shortest or longest path (you can switch
  between those paths by negating one of the quaternions).
  This fixes "bug" 1488467.
- Wherever a wrapped C++ function was expecting a vec3/vec4 as input it 
  is now also possible to pass a sequence with 3/4 floats.
- RMShader: Array parameters can now be processed as well.
- A Globals section can now appear more than once without that it resets
  some of the scene values (like the up vector or handedness).
- The built-in materials (GLMaterial, Material3DS, OBJMaterial) can now
  also be used for baking.
- Bugfix: When baking maps, the transformation of the object was ignored.
  This led to incorrect surface shading when the transformation was 
  anything else than the identity.
- WorldObjects now support comparison (i.e. two WorldObject wrappers that
  reference the same C++ object will now appear as identical)
- The setup script was checking for Boost.Python headers even when the
  'light' version was installed. This is fixed.
- Using the GLMaterial class for RenderMan renders was broken (because
  it was still assumed a GLMaterial can only have one texture)
- RMShader: The declare() method did not work when the name argument
  didn't contain an inline declaration and the parameter name started
  with a SL type (such as "colorscale").

----------------------------------------------------------------------